FIX, FAQpage, TicketModal, Ticket for better UI - added <hr> tag between Question and Answer for Ticket&FAQ, Ticket Component modified for overlap

--- a/src/components/Ticket/Ticket.css
+++ b/src/components/Ticket/Ticket.css
@@ -12,15 +12,14 @@
   padding: 1rem;
   border-radius: 30px;
   position: relative;
+  background-color: var(--bg-0);
+  justify-content: space-between;
+  align-items: center;
 }
-
-/* .ticket__button {
-} */
 
 .ticket--inactive {
   display: none;
 }
-
 .ticket {
   width: 100vw;
   height: 100vh;
@@ -98,7 +97,8 @@
 }
 
 .ticket__progress--1 {
-  background-color: yellow;
+  background-color: #f9e000;
+  color: var(--bg-0);
 }
 
 .ticket__progress--1 > svg {
